fix: vertically center datetime-local inner edit text on iOS Safari

--- a/src/index.css
+++ b/src/index.css
@@ -409,6 +409,15 @@ input[type="datetime-local"].input {
   box-sizing: border-box !important;
 }
 
+input[type="datetime-local"]::-webkit-datetime-edit,
+input[type="datetime-local"]::-webkit-datetime-edit-fields-wrapper {
+  display: inline-flex !important;
+  align-items: center !important;
+  height: 100% !important;
+  padding: 0 !important;
+}
+
+
 
 
 .input::placeholder {
